# gDS

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  format_all.sh  generate_dual_nodes_scripts.py  main.py  pyproject.toml  run_and_commit.sh  save_gh_logs.py
aisbench_tools/: README.md  make_gsm8k.py
config_generator/: README.md  __init__.py  generate_dual_nodes_scripts.py  generate_single_node_test.py
config_generator/test_dual_nodes/: node0.sh  node1.sh
config_generator/test_single_node/: node0.sh  node1.sh  start_server.sh
gh_action_watcher/: gh_watcher.py  run_and_commit.sh  save_gh_logs.py
gh_action_watcher/logs/: deepseek-v3-2-w8a8_results.csv  deepseek-v3.2-W8A8-EP_results.csv  multi-node-dpsk3.2-2node_results.csv  results.db  test_deepseek_v3_2_w8a8_results.csv
gh_action_watcher/logs/2026-01-30/: 2026-01-30_4230bc8_multi-node-dpsk3.2-2node_62067607085.log.analysis  2026-01-30_4230bc8_test_deepseek_v3_2_w8a8_62068000229.log.analysis
gh_action_watcher/logs/2026-01-31/: 2026-01-31_775fbc4_multi-node-dpsk3.2-2node_62094536513.log.analysis  2026-01-31_775fbc4_test_deepseek_v3_2_w8a8_62100420555.log.analysis
gh_action_watcher/logs/2026-02-01/: 2026-02-01_347eb36_multi-node-dpsk3.2-2node_62142394269.log.analysis  2026-02-01_347eb36_test_deepseek_v3_2_w8a8_62158297385.log.analysis
logs/: multi-node-dpsk3.2-2node_results.csv  test_deepseek_v3_2_w8a8_results.csv
value_issues/: fetch_gitcode_model_downloads.py  fetch_vllm_ascend_issues.py  model_downloads.csv  vllm_ascend_issues.csv  vllm_ascend_issues.json
(+104 files in other folders)
