[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gds-tools"
version = "0.1.0"
description = "gDS tools for vLLM deployment and testing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click",
    "loguru",
    "pyyaml",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "isort>=7.0.0",
    "ruff>=0.15.0",
    "-e .",
]

[tool.setuptools.packages.find]
include = ["config_generator*", "gh_action_watcher*"]

[project.scripts]
gen-single-node = "config_generator.generate_single_node_test:main"
gen-dual-nodes = "config_generator.generate_dual_nodes_scripts:main"
gh-watcher = "gh_action_watcher.gh_watcher:main"
